# icgame

./: .dockerignore  Dockerfile  README.md  case_packet.txt  icgame  icgame.pub  pyproject.toml
src/bet_sizing_game/: __init__.py  cli.py  engine.py  models.py  server.py
src/bet_sizing_game/static/: app.js  index.html  styles.css
src/gt_market_making/: __init__.py  cli.py  exchange.py  models.py  scenarios.py  simulator.py  strategies.py  taker_bot.py
tests/: test_bet_sizing_engine.py  test_scenarios.py  test_simulator.py
